temp/objects/Game__c.object
<CustomObject>
    <label>Game</label>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Away_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Away Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Games (Away Team)</relationshipLabel>
        <relationshipName>Games1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Tournament__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>